--- a/entry/view/index.html
+++ b/entry/view/index.html
@@ -5,14 +5,46 @@
   <title>Image Resizer</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-  <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'"> -->
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
+
   <link rel="stylesheet" href="./styling/global.css">
+  <script src="../controller/winScripts/index.js" defer></script>
 </head>
 
-<body className="w-screen h-screen">
-  <div className="h-full w-full bg-gray-800 text-gray-200 flex items-center justify-center text-5xl">Hello world</div>
+<body class="w-screen h-screen">
+  <div class="h-full w-full bg-gray-800 text-gray-200 flex flex-col items-center justify-center">
+    <label for="img" class="w-[80%] sm:w-[50%] h-[200px] bg-gray-700 p-2 flex items-center justify-center rounded cursor-pointer">
+      <span class="flex bg-gray-700/50 p-2 rounded-md font-bold">SELECT AN IMAGE TO RESIZE</span>
+      <input type="file" id="img" class="hidden" />
+    </label>
+
+    <!--FORM-->
+    <form id="img-form" class="w-full sm:w-[80%] mx-auto my-6 hidden">
+      <label class="w-full flex">
+        <input type="text" placeholder="New width" required id="width" class="border-none bg-gray-700 p-2 w-[90%] sm:w-[70%] h-[50px] text-gray-200 rounded mx-auto outline-none text-lg">
+      </label>
+  
+      <label class="w-full flex mt-6">
+        <input type="text" placeholder="New height" required
+        id="height" class="border-none bg-gray-700 p-2 w-[90%] sm:w-[70%] h-[50px] text-gray-200 rounded mx-auto outline-none text-lg">
+      </label>
+      <!-- export const RE_DIGIT = new RegExp(/^\d+$/); -->
+      <button class="w-[80%] sm:w-[60%] h-[50px] mt-6 flex items-center justify-center bg-gray-700 p-2 text-gray-200 rounded mx-auto hover:border text-lg">Resize</button>
+    </form>
+
+    <div class="mt-6 hidden flex-col gap-4">
+      <p>
+        <span class="bg-gray-600/50 p-1 px-2 rounded">File:</span>
+        <strong id="filename"></strong>
+      </p>
+
+      <p>
+        <span class="bg-gray-600/50 p-1 px-2 rounded">Output:</span>
+        <strong id="output-path"></strong>
+      </p>
+    </div>
+  </div>
+
 </body>
 
 </html>
