--- a/entry/view/about.html
+++ b/entry/view/about.html
@@ -8,13 +8,14 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 
     <link rel="stylesheet" href="./styling/global.css">
-    <script src="../controller/winScripts/index.js" defer></script>
+    <script src="../controller/winScripts/about.js" defer></script>
   </head>
 
   <body class="w-screen h-screen">
-    <div class="h-full w-full bg-gray-800 text-gray-200 flex flex-col items-center justify-center">
+    <div class="h-full w-full bg-gray-800 text-gray-200 flex flex-col items-center justify-center text-center text-lg">
       <p>This is app was created by the fantastic Enoch Enujiugha</p>
       <p id="extra-info"></p>
+      <button id="ping-btn" class="mt-3 bg-gray-700 rounded p-2 px-4 w-fit hover:bg-gray-700/50">Ping</button>
     </div>
   </body>
 </html>
