--- a/src/styling/global.css
+++ b/src/styling/global.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  .drag-region {
+    -webkit-user-select: none;
+    -webkit-app-region: drag;
+  }
+
+  .no-drag-region {
+    -webkit-app-region: no-drag;
+  }
+
+  .toast {
+    -webkt-user-select: none;
+  }
+}
