--- a/entry/view/index.html
+++ b/entry/view/index.html
@@ -19,8 +19,8 @@
       <p class="text-3xl text-blue-300 pl-2">Image Resizer</p>
     </div>
     <div class="flex-grow-[1] flex justify-end">
-      <button class="w-[60px] h-[50px] no-drag-region text-gray-100 text-3xl flex items-center justify-center hover:bg-gray-700/30" title="minimize app">-</button>
-      <button class="w-[60px] h-[50px] no-drag-region text-gray-100 text-xl flex items-center justify-center hover:bg-red-700/70" title="close app">X</button>
+      <button id="minimize-app" class="w-[60px] h-[50px] no-drag-region text-gray-100 text-3xl flex items-center justify-center hover:bg-gray-700/30" title="minimize app">-</button>
+      <button id="close-app" class="w-[60px] h-[50px] no-drag-region text-gray-100 text-xl flex items-center justify-center hover:bg-red-700/70" title="close app">X</button>
     </div>
   </div>
 
